# CompleteTech-LLC-AI-Research

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CELERY_TESTING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CODING_PROMPT.md  CONTRIBUTING.md  COST_TRACKING.md  DEPLOYMENT.md  DOCUMENTATION_UPDATES.md  Dockerfile.api  Dockerfile.landing  EXECUTION_PLAN.md  EXECUTION_STATUS.md  INTEGRATION_TESTING.md  KNOWLEDGE_GRAPH_TEST.md  KNOWLEDGE_GRAPH_UX_PLAN.md  LICENSE  NEXT_STEPS.md  NEXT_STEPS_EXECUTION_PLAN.md  PAPER_PROCESSING_IMPLEMENTATION.md  PAPER_PROCESSING_IMPLEMENTATION_PLAN.md  PAPER_PROCESSING_PROMPT.md  PLAN.md  PROJECT_PROPOSAL_TEMPLATE.md  PROJECT_SETUP.md  README.md  RESEARCH_PROPOSAL.md  SEO_PROMPT.md  SUMMARY.md  TEMPORAL_TECHNICAL_SPEC.md  TESTING.md  THEME.md  WEBSOCKET_TEST_PLAN.md  debug_document_processor.py  debug_test.py  (+16 more)
.github/workflows/: README.md  dependency_review.yml  generate_test_badges.yml  information_gathering_tests.yml  knowledge_extraction_tests.yml  run-tests.yml
docs/: README.md
docs/architecture/: modular_component_architecture.md
docs/implementation_plans/: TEMPORAL_IMPLEMENTATION_PLAN.md
docs/infrastructure/: COST_TRACKING.md
docs/modules/: MIGRATION_GUIDE.md
docs/plans/: ERROR_RECOVERY_IMPLEMENTATION_PLAN.md  PAPER_PROCESSING_IMPLEMENTATION_PLAN.md  REORGANIZATION_PLAN.md  TEST_IMPROVEMENTS.md
docs/testing/: KNOWLEDGE_EXTRACTION_TEST_PLAN.md  TEST_IMPROVEMENT_PLAN.md  TEST_REPORT.md
examples/: research_orchestrator_demo.py
examples/external_adapters/: autocode_agent_example.py  gdesigner_example.py  open_deep_research_example.py
examples/knowledge_integration/: knowledge_graph_adapter_example.py
examples/research_generation/: report_structure_example.py
examples/research_understanding/: detail_collector_example.py  engine_example.py  paper_processing_example.py  sample_paper.md  understanding_engine_example.py
knowledge_graph_system/: README.md
knowledge_graph_system/config/: db_config.json  schema.json
knowledge_graph_system/core/: README.md  knowledge_graph_manager.py
knowledge_graph_system/knowledge_extractor/: DEVELOPER_PLAN.md  README.md
knowledge_graph_system/knowledge_graph/: connection_discovery_engine.py  contradiction_resolution_system.py
plan/: implementation_status.md
plan/file_structures/: KnowledgeGraphSystem_FileStructure.md  README.md  ResearchOrchestrator_FileStructure.md
plan/structural/: HL_Plan1_ResearchOrchestrator.md  HL_Plan2_KnowledgeGraphSystem.md  HL_Plan3_ExperimentalImplementationSystem.md  LL_Plan3_ExperimentalImplementationSystem.md  ML_Plan1_ResearchOrchestrator.md  ML_Plan3_ExperimentalImplementationSystem.md
research_implementation/: DEVELOPER_PLAN.md
research_implementation/api/: planning.py
research_implementation/core/: implementation_manager.py
research_implementation/implementation_planning/: planner.py  service.py  task_planner.py  (+1 more)
src/: .env.example  CLAUDE.md  README.md  paper_processing_plan.md  requirements.txt
test_papers/: test_paper_content.txt
tests/: README.md  conftest.py  run_tests.py
(+641 files in other folders)
