[metadata]
name = ai-research-integration
version = 0.1.0
description = AI Research Integration Project - Knowledge discovery and implementation system
author = Complete Tech
author_email = completetech@example.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    langchain>=0.1.0
    numpy>=1.20.0
    pandas>=1.3.0
    requests>=2.25.0
    pydantic>=2.0.0
    neo4j>=4.4.0
    typing-extensions>=4.0.0
    PyYAML>=6.0
python_requires = >=3.9
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.12.0
    mypy>=0.910
    flake8>=4.0.0
    black>=22.0.0
    isort>=5.10.0

[options.package_data]
* = *.txt, *.md, *.json, *.yaml, *.yml

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
strict_optional = True

[mypy.plugins.pydantic_mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True